# ubunye_engine

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  DEV_README.md  LICENSE  MIGRATION_README.md  OVERNIGHT_PLAN.md  OVERNIGHT_REPORT.md  README.md  TODO.md  code_of_conduct.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  security.md  setup.py  sitemap.xml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: absa_flood_risk_databricks.yml  absa_telematics_etl_databricks.yml  ci.yml  databricks_deploy.yml  deploy.yml  docs.yml  jhb_weather_databricks.yml  local_pipeline.yml  multitask_databricks.yml  multitask_local.yml  publish_pypip.yml  tests.yml  titanic_ml_databricks.yml
.hypothesis/constants/: 00c42692695af3f4  077589e6596da2a7  0fd0a1a596cb62b0  1201e29c00a8470a  1bb1abc388aa3182  3ea98aa40a26332c  40cfb3eef9d65ceb  4556746d5fc9e6c0  55ea176171af1b3a  59cc87c25453ab85  6da6169dc5aaad09  6e486a58aa7e2742  71321817cc3edc27  7525b9741335356a  760abdfa94917f60  813653d5d9496365  8260700379b2efae  9309fbcd23be959f  9925c35cbd6b41b1  a98894dda046e569  ac5650e74fe437ac  b19b7834ae5303ea  be3c4374dd9d49c8  c394a0c3c70787ad  c7e97a64649677ab  cd9d538bd80f332c  ce87747dd5106367  da39a3ee5e6b4b0d  e42b3d70379b8c3f  e9eec9691ac06d48
.hypothesis/tmp/: tmpbtv219l9  tmpnukkgjgz  tmpwuaoge6i  tmpz20o91xf
api/: index.html
blog/: blog.md
changelog/: index.html
cli/: index.html
config/engine/: index.html
config/io/: index.html
config/jinja/: index.html
config/orchestration/: index.html
config/overview/: index.html
config/transform/: index.html
connectors/hive/: index.html
connectors/jdbc/: index.html
connectors/overview/: index.html
connectors/plugin_guide/: index.html
connectors/rest_api/: index.html
connectors/s3/: index.html
connectors/unity/: index.html
contributing/: index.html
deployment/: index.html
dev_guide/: index.html
docs/: CHANGELOG.md  api.md  changelog.md  cli.md  config_reference.md  contributing.md  databricks-auth.md  deployment.md  dev_guide.md  index.md  installation.md  overview.md  plugins.md  quickstart.md  requirements.txt
docs/config/: engine.md  io.md  jinja.md  orchestration.md  overview.md  transform.md
docs/connectors/: hive.md  jdbc.md  overview.md  plugin_guide.md  rest_api.md  s3.md  unity.md
docs/getting_started/: install.md  quickstart.md  structure.md
docs/ml/: model_contract.md  registry.md
docs/patterns/: drift.md  features.md  hooks.md  rag.md  rest_api.md
examples/: titanic_end_to_end.ipynb
examples/production/: README.md
examples/python_api/: README.md  run_full_pipeline.py  run_single_task.py
getting_started/install/: index.html
getting_started/quickstart/: index.html
getting_started/structure/: index.html
ml/model_contract/: index.html
ml/registry/: index.html
papers/: outline.md  related_work_matrix.md  voice_sheet.md
patterns/drift/: index.html
scripts/: generate_docs.py
search/: search_index.json
tasks/: README.md
tests/: conftest.py  test_config.py  test_rest_api_plugin.py  test_runtime.py
ubunye/: __init__.py  api.py
ubunye_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+198 files in other folders)
