[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubunye-engine"
version = "0.1.0"
description = "Config-first, Spark-native ETL/ML engine with a modular plugin system"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Ubunye Team"}]
dependencies = [
  "pyyaml>=6",
  "jinja2>=3",
  "pydantic>=2",
  "typer[all]>=0.12",
  # pyspark is large; declare as optional so users can choose version
]

[project.optional-dependencies]
spark = ["pyspark>=3.3"]
ml = ["scikit-learn", "torch", "mlflow"]
rest = ["requests>=2.28"]
dev = ["pytest", "pytest-cov>=4", "pytest-timeout", "black", "ruff", "build", "requests>=2.28", "hypothesis>=6"]
test = ["pytest>=7", "pytest-cov>=4", "hypothesis>=6", "pyspark>=3.4"]

[project.scripts]
ubunye = "ubunye.cli.main:app"

[project.entry-points."ubunye.readers"]
hive = "ubunye.plugins.readers.hive:HiveReader"
jdbc = "ubunye.plugins.readers.jdbc:JdbcReader"
unity = "ubunye.plugins.readers.unity:UnityTableReader"
rest_api = "ubunye.plugins.readers.rest_api:RestApiReader"

[project.entry-points."ubunye.writers"]
s3 = "ubunye.plugins.writers.s3:S3Writer"
jdbc = "ubunye.plugins.writers.jdbc:JdbcWriter"
unity = "ubunye.plugins.writers.unity:UnityTableWriter"
rest_api = "ubunye.plugins.writers.rest_api:RestApiWriter"

[project.entry-points."ubunye.transforms"]
noop  = "ubunye.plugins.transforms.noop:NoOpTransform"
model = "ubunye.plugins.transforms.model_transform:ModelTransform"

[project.entry-points."ubunye.ml"]
sklearn = "ubunye.plugins.ml.sklearn:SklearnModel"
sparkml = "ubunye.plugins.ml.pysparkml:SparkMLModel"

[project.entry-points."ubunye.monitors"]
mlflow  = "ubunye.telemetry.mlflow:MLflowMonitor"
lineage = "ubunye.lineage.recorder:LineageRecorder"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a local Spark session and Java 11",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
